--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.10",
+    "glider-js": "^1.7.7",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-glider": "^2.2.0",
+    "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-scroll-horizontal": "^1.6.6",
     "react-toast-notifications": "^2.4.4",
-    "styled-components": "^5.2.3"
+    "react-touch-drag-slider": "^2.1.3",
+    "react-use": "^17.2.4",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@types/glider-js": "^1.7.3",
     "typescript": "^4.2.4"
   }
 }
